--- a/_config.yml
+++ b/_config.yml
@@ -6,17 +6,17 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Pablo Selín
+title: Pablo Selín | Comics
 email: pabloselin@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Comics y desolación
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://pablosel.in" # the base hostname & protocol for your site
 collections:
-  comics:
-    output: true
-    values:
-      layout: comic
+ comics:
+   output: true
+   values:
+    layout: comic
 
 # Build settings
 markdown: kramdown
