--- a/_data/prints.yml
+++ b/_data/prints.yml
@@ -9,7 +9,7 @@
   priceUS: 10
   priceCL: 5000
   img: print_4let
-  details: Color 24 pp.
+  details: Color 24 pp. Incluye OGGO - PLPL - Landscape Boy
   paypalBtnID: DJ4RG6Q52EPE2
 
 - name: Strange Outpost
