--- a/_data/links.yml
+++ b/_data/links.yml
@@ -9,3 +9,6 @@
 
 - name: Mega Crap
   url: http://themegacrap.tumblr.com
+
+- name: Ultimate Melee Warrior Doom
+  url: http://ultimatemeleewarriordoom.com
