--- a/_data/zines.yml
+++ b/_data/zines.yml
@@ -28,5 +28,5 @@
 - name: Strange Outpost
   year: 2013
 
-- name: Ultimate Melee Warrior Doom (con Incas of Emergency)
+- name: Ultimate Melee Warrior Doom (with Incas of Emergency)
   year: 2009
