--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ instagram: donhilo
 description: > # this means to ignore newlines until "baseurl:"
   Cómics y dibujos de Pablo Selín Carrasco Armijo
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://pablosel.in" # the base hostname & protocol for your site
+url: "https://pablosel.in" # the base hostname & protocol for your site
 collections:
  comics:
    output: true
