--- a/_data/concursos.yml
+++ b/_data/concursos.yml
@@ -1,5 +1,15 @@
-- name: Outpost cómics - Fondo del Libro, modalidad de creación
+- name: Trueno enrollado
+  who: National Fund for the Development of Culture and the Arts
+  year: 2019
+
+- name: VSC Residency funding
+  who: National Fund for the Development of Culture and the Arts
+  year: 2019
+
+- name: Outpost comics
+  who: National Fund for the Development of Culture and the Arts
   year: 2015
 
-- name: Ultimate Melée Warrior Doom - Fondart, modalidad de creación
+- name: Ultimate Melée Warrior Doom
+  who: National Fund for the Development of Culture and the Arts
   year: 2009
