--- a/_data/expos.yml
+++ b/_data/expos.yml
@@ -1,3 +1,7 @@
+- name: Limbo
+  place: The Intuitive Machine. Santiago, Chile
+  year: 2018
+
 - name: Dobles de Proximidad
   place: Museo de Arte Contemporáneo Parque Forestal. Santiago, Chile.
   year: 2018
