--- a/_data/comicfairs.yaml
+++ b/_data/comicfairs.yaml
@@ -2,6 +2,14 @@
   place: Lima, Perú
   year: 2018
 
+- name: Festival Dibujona
+  place: Antofagasta, Chile
+  year: 2017
+
+- name: Fanzineichon
+  place: Santiago, Chile
+  year: 2017
+
 - name: Comic Arts Brooklyn
   place: New York, USA
   year: 2015
