--- a/_data/videogames.yml
+++ b/_data/videogames.yml
@@ -1,3 +1,7 @@
+- name: Quien Soy (with Germina and A Pie)
+  year: 2019
+  link: #
+
 - name: Bodybuilder - destroyer of worlds (with Felipe Zilleruelo)
   year: 2014
   link: https://gamejolt.com/games/bodybuilder-destroyer-of-worlds/10907
