solo expos update

--- a/_data/soloexpos.yaml
+++ b/_data/soloexpos.yaml
@@ -1,3 +1,7 @@
+- name: glglgl
+  place: The Intuitive Machine, Santiago, Chile
+  year: 2020
+
 - name: Endless Piledriver
   place: Galeria Metropolitana, Santiago, Chile
   year: 2020
