--- a/_data/expos.yml
+++ b/_data/expos.yml
@@ -1,3 +1,7 @@
+- name: Videoclub July
+  place: Proyecto Marisol, Santiago, Chile
+  year: 2020
+
 - name: Limbo
   place: The Intuitive Machine. Santiago, Chile
   year: 2018
